# visco-api

./: .env  CAMERA_VPN_STREAMING.md  IMPLEMENTATION_SUMMARY.md  README.md  database_migration_add_wireguard_fields.sql  generate_wireguard_keys.py  main.py  migration_add_external_port.py  pyproject.toml  requirements.txt  run.py  secrets_wireguard.txt  setup_kvs_streaming.sh
Deploy/: README.md  deploy_backend.sh  deploy_database.sh
Guides/: KVS_STREAM_MANAGEMENT.md  VPN_CAMERA_ANALYSIS_AND_IMPROVEMENTS.md  VPN_CAMERA_IMPLEMENTATION_COMPLETE.md
Sample/: wg0.conf
Scripts/: README.md  update_wg_config.sh
Systemd/: visco-api.service  wg-watch.path  wg-watch.service
app/: auth.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/config/: settings.py
app/routers/: alerts_routes.py  auth_routes.py  camera_routes.py  camera_routes_enhanced.py  me_routes.py  stream_routes.py  subscriptions_and_payment_routes.py  super_admin_routes.py  user_routes.py  wireguard_routes.py
app/services/: ip_manager.py  kvs_stream_service.py  wireguard_service.py
app/utils/: crypto_utils.py  otp_utils.py  process_utils.py  system_utils.py  token_utils.py
