[project]
name = "visco-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.13.1",
    "fastapi==0.116.1",
    "ipaddress>=1.0.23",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.10.1",
    "pydantic[email]==2.11.7",
    "pynacl>=1.5.0",
    "python-dotenv==1.1.1",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.20",
    "sqlalchemy==2.0.42",
    "uvicorn==0.35.0",
]
